@@ -4,6 +4,9 @@ update-manager (1:0.111.0) UNRELEASED; urgency=low
     - fix pre r6xx/7xx fglrx->ati transition
   * DistUpgrade/DistUpgradeQuirks.py:
     - fix incorrect variable name
+  * DistUpgrade/DistUpgradeView.py:
+    - remove old crash files on upgrade (thanks to
+      Martin Pitt)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 24 Mar 2009 20:49:50 +0100
 
